# health-sync

./: .gitignore  AGENTS.md  README.md  health-sync.example.toml  package-lock.json  package.json  pyproject.toml
clawhub/skills/health-sync/: SKILL.md
docs/: architecture.md  release.md  remote-bootstrap.md
health_sync/: cli.py  config.py  db.py  util.py
health_sync/plugins/: __init__.py  base.py  loader.py
health_sync/providers/: __init__.py  eightsleep.py  hevy.py  oura.py  runtime.py  strava.py  withings.py
node/: README.md  package-lock.json  package.json
node/src/: cli.js  config.js  db.js  util.js
node/tests/: db.test.js  eightsleep-provider.test.js  hevy-provider.test.js  plugins.test.js  test-helpers.js  util.test.js
release-notes/: v0.3.1.md  v0.3.2.md  v0.3.3.md  v0.3.4.md
skills/eightsleep/: SKILL.md
skills/health-sync/: SKILL.md
src/: auth-onboarding.js  cli.js  config.js  db.js  remote-bootstrap.js  util.js
src/plugins/: base.js
src/providers/: eightsleep.js  hevy.js  index.js  oura.js  strava.js  whoop.js  withings.js
tests/: cli.test.js  db.test.js  hevy-provider.test.js  oura-provider.test.js  plugins.test.js  provider-contracts.test.js  remote-bootstrap.test.js  strava-provider.test.js  test-helpers.js  test_cli.py  test_config.py  test_db.py  test_eightsleep_provider.py  test_hevy_provider.py  test_oura_provider.py  test_plugins.py  test_provider_contracts.py  test_provider_runtime.py  test_strava_provider.py  test_util.py  test_withings_provider.py  whoop-provider.test.js  withings-provider.test.js
(+18 files in other folders)
