[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "health-sync"
version = "0.1.0"
description = "Sync Oura, Withings, Hevy, Strava, and Eight Sleep data into a local SQLite DB"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Filipe Almeida", email = "filipe.almeida@gmail.com" },
]
keywords = ["health", "sqlite", "oura", "withings", "hevy", "strava", "eight-sleep"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "requests>=2.0.0",
]

[project.scripts]
health-sync = "health_sync.cli:main"

[tool.setuptools.packages.find]
include = ["health_sync*"]
